--- a/Windows-10-сборки.css
+++ b/Windows-10-сборки.css
@@ -306,13 +306,26 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 6292px;
+    min-height: 6087px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 23px;
     margin-left: 50px;
     margin-right: 50px;
+  }
+
+  .u-section-1 .u-image-1 {
+    height: 303px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-2 {
+    height: 303px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-image-3 {
@@ -380,15 +393,11 @@
     margin-left: 0;
     margin-right: 0;
   }
-
-  .u-section-1 .u-btn-8 {
-    margin-bottom: 25px;
-  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 6177px;
+    min-height: 5537px;
   }
 
   .u-section-1 .u-text-1 {
@@ -397,11 +406,33 @@
   }
 
   .u-section-1 .u-text-2 {
-    margin-left: 4px;
-    margin-right: 4px;
+    margin-left: 2px;
+    margin-right: 2px;
+  }
+
+  .u-section-1 .u-image-1 {
+    height: 191px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-2 {
+    height: 191px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-3 {
+    height: 190px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-image-4 {
+    height: 190px;
     object-position: 0% 50%;
     width: auto;
     margin-right: initial;
