--- a/Windows-10-сборки.css
+++ b/Windows-10-сборки.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 7685px;
+  min-height: 7790px;
 }
 
 .u-section-1 .u-text-1 {
@@ -100,6 +100,14 @@
   margin: 45px auto 0;
 }
 
+.u-section-1 .u-btn-5 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  align-self: center;
+  margin: 9px auto 0;
+  padding: 10px 43px 10px 42px;
+}
+
 .u-section-1 .u-text-6 {
   margin: 120px auto 0;
 }
@@ -126,40 +134,47 @@
   margin: 29px -8px 0;
 }
 
-.u-section-1 .u-btn-5 {
+.u-section-1 .u-btn-6 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   align-self: center;
   margin: 45px auto 0;
 }
 
-.u-section-1 .u-text-8 {
-  margin: 111px auto 0;
+.u-section-1 .u-btn-7 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  align-self: center;
+  margin: 9px auto 0;
+  padding: 10px 43px 10px 42px;
 }
 
-.u-section-1 .u-btn-6 {
+.u-section-1 .u-text-8 {
+  margin: 110px auto 0;
+}
+
+.u-section-1 .u-btn-8 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   align-self: center;
   margin: 3px auto 0;
   padding: 10px 32px;
 }
 
-.u-section-1 .u-btn-7 {
+.u-section-1 .u-btn-9 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   align-self: center;
   margin: 6px auto 0;
 }
 
-.u-section-1 .u-btn-8 {
+.u-section-1 .u-btn-10 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 6px auto 45px;
+  margin: 6px auto 44px;
   padding: 10px 37px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 7753px;
+    min-height: 7960px;
   }
 
   .u-section-1 .u-text-1 {
@@ -184,7 +199,6 @@
 
   .u-section-1 .u-text-4 {
     width: auto;
-    margin-top: 121px;
   }
 
   .u-section-1 .u-text-5 {
@@ -205,14 +219,14 @@
     width: auto;
   }
 
-  .u-section-1 .u-btn-8 {
-    margin-bottom: 18px;
+  .u-section-1 .u-btn-10 {
+    margin-bottom: 60px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 6819px;
+    min-height: 7034px;
   }
 
   .u-section-1 .u-text-1 {
@@ -248,6 +262,11 @@
     width: auto;
   }
 
+  .u-section-1 .u-text-3 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
   .u-section-1 .u-text-4 {
     margin-top: 122px;
   }
@@ -273,9 +292,8 @@
     width: auto;
   }
 
-  .u-section-1 .u-text-5 {
-    margin-left: -79px;
-    margin-right: -79px;
+  .u-section-1 .u-text-6 {
+    margin-top: 122px;
   }
 
   .u-section-1 .u-image-8 {
@@ -299,14 +317,15 @@
     width: auto;
   }
 
-  .u-section-1 .u-btn-8 {
-    margin-bottom: 24px;
+  .u-section-1 .u-text-7 {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 6087px;
+    min-height: 4077px;
   }
 
   .u-section-1 .u-text-1 {
@@ -342,6 +361,11 @@
     margin-left: initial;
   }
 
+  .u-section-1 .u-text-3 {
+    margin-left: -1px;
+    margin-right: -1px;
+  }
+
   .u-section-1 .u-image-5 {
     height: 304px;
     width: auto;
@@ -361,11 +385,6 @@
     width: auto;
     margin-right: initial;
     margin-left: initial;
-  }
-
-  .u-section-1 .u-text-5 {
-    margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-1 .u-image-8 {
@@ -388,16 +407,11 @@
     margin-right: initial;
     margin-left: initial;
   }
-
-  .u-section-1 .u-text-7 {
-    margin-left: 0;
-    margin-right: 0;
-  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 5537px;
+    min-height: 2948px;
   }
 
   .u-section-1 .u-text-1 {
@@ -485,6 +499,11 @@
     margin-right: -82px;
   }
 
+  .u-section-1 .u-btn-5 {
+    margin-left: -82px;
+    margin-right: -82px;
+  }
+
   .u-section-1 .u-text-6 {
     margin-left: 0;
     margin-right: 0;
@@ -511,7 +530,12 @@
     margin-left: initial;
   }
 
-  .u-section-1 .u-btn-5 {
+  .u-section-1 .u-btn-6 {
+    margin-left: -82px;
+    margin-right: -82px;
+  }
+
+  .u-section-1 .u-btn-7 {
     margin-left: -82px;
     margin-right: -82px;
   }
