--- a/Windows-7-сборки.css
+++ b/Windows-7-сборки.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 6804px;
+  min-height: 6888px;
 }
 
 .u-section-1 .u-text-1 {
@@ -69,7 +69,7 @@
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
   align-self: center;
-  margin: 6px auto 0;
+  margin: 9px auto 0;
   padding: 10px 58px;
 }
 
@@ -77,12 +77,12 @@
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
   align-self: center;
-  margin: 6px auto 0;
+  margin: 9px auto 0;
   padding: 10px 60px;
 }
 
 .u-section-1 .u-text-4 {
-  margin: 118px auto 0;
+  margin: 112px auto 0;
 }
 
 .u-section-1 .u-image-7 {
@@ -115,18 +115,26 @@
   padding: 10px 47px;
 }
 
-.u-section-1 .u-text-6 {
-  margin: 86px auto 0;
+.u-section-1 .u-btn-5 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  align-self: center;
+  margin: 9px auto 0;
+  padding: 10px 60px;
 }
 
-.u-section-1 .u-btn-5 {
+.u-section-1 .u-text-6 {
+  margin: 115px auto 0;
+}
+
+.u-section-1 .u-btn-6 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   align-self: center;
   margin: 0 auto;
 }
 
-.u-section-1 .u-btn-6 {
+.u-section-1 .u-btn-7 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   align-self: center;
@@ -134,7 +142,7 @@
   padding: 10px 30px;
 }
 
-.u-section-1 .u-btn-7 {
+.u-section-1 .u-btn-8 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 6px auto 28px;
@@ -143,7 +151,7 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 6812px;
+    min-height: 5680px;
   }
 
   .u-section-1 .u-text-1 {
@@ -173,15 +181,11 @@
   .u-section-1 .u-text-6 {
     width: auto;
   }
-
-  .u-section-1 .u-btn-7 {
-    margin-bottom: 35px;
-  }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 4302px;
+    min-height: 3435px;
   }
 
   .u-section-1 .u-image-1 {
@@ -255,7 +259,7 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 3390px;
+    min-height: 2523px;
   }
 
   .u-section-1 .u-image-1 {
@@ -307,15 +311,16 @@
     margin-left: -1px;
     margin-right: -1px;
   }
+
+  .u-section-1 .u-btn-5 {
+    margin-left: -1px;
+    margin-right: -1px;
+  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 4618px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-top: 27px;
+    min-height: 1506px;
   }
 
   .u-section-1 .u-text-2 {
@@ -346,7 +351,6 @@
 
   .u-section-1 .u-image-4 {
     height: 191px;
-    margin-top: 38px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -426,7 +430,10 @@
     padding-right: 15px;
   }
 
-  .u-section-1 .u-btn-7 {
-    margin-bottom: 38px;
+  .u-section-1 .u-btn-5 {
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 28px;
+    padding-right: 28px;
   }
 }
