--- a/Windows-Mini-сборки.css
+++ b/Windows-Mini-сборки.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 11999px;
+  min-height: 12433px;
 }
 
 .u-section-1 .u-text-1 {
@@ -41,8 +41,32 @@
   padding: 10px 26px;
 }
 
+.u-section-1 .u-btn-3 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 11px auto 0;
+  padding: 10px 41px;
+}
+
+.u-section-1 .u-btn-4 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 11px auto 0;
+  padding: 10px 37px;
+}
+
+.u-section-1 .u-btn-5 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 11px auto 0;
+  padding: 10px 43px 10px 42px;
+}
+
+.u-section-1 .u-btn-6 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 11px auto 0;
+  padding: 10px 39px 10px 38px;
+}
+
 .u-section-1 .u-text-4 {
-  margin: 95px auto 0;
+  margin: 120px auto 0;
 }
 
 .u-section-1 .u-image-3 {
@@ -73,13 +97,25 @@
   margin: 28px auto 0;
 }
 
-.u-section-1 .u-btn-3 {
+.u-section-1 .u-btn-7 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 46px auto 0;
 }
 
+.u-section-1 .u-btn-8 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 11px auto 0;
+  padding: 10px 41px;
+}
+
+.u-section-1 .u-btn-9 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 11px auto 0;
+  padding: 10px 43px 10px 42px;
+}
+
 .u-section-1 .u-text-6 {
-  margin: 99px auto 0;
+  margin: 120px auto 0;
 }
 
 .u-section-1 .u-image-7 {
@@ -104,9 +140,21 @@
   margin: 28px auto 0;
 }
 
-.u-section-1 .u-btn-4 {
+.u-section-1 .u-btn-10 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 46px auto 0;
+}
+
+.u-section-1 .u-btn-11 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 11px auto 0;
+  padding: 10px 41px;
+}
+
+.u-section-1 .u-btn-12 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 11px auto 0;
+  padding: 10px 43px 10px 42px;
 }
 
 .u-section-1 .u-text-8 {
@@ -129,7 +177,7 @@
   margin: 28px auto 0;
 }
 
-.u-section-1 .u-btn-5 {
+.u-section-1 .u-btn-13 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 46px auto 0;
 }
@@ -154,7 +202,7 @@
   margin: 28px auto 0;
 }
 
-.u-section-1 .u-btn-6 {
+.u-section-1 .u-btn-14 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 46px auto 60px;
 }
@@ -165,13 +213,26 @@
     margin-right: 92px;
   }
 
+  .u-section-1 .u-btn-5 {
+    margin-top: 12px;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-left: 27px;
+    margin-right: 27px;
+  }
+
+  .u-section-1 .u-text-6 {
+    margin-top: 169px;
+  }
+
   .u-section-1 .u-text-7 {
     margin-left: 27px;
     margin-right: 27px;
   }
 
-  .u-section-1 .u-btn-4 {
-    margin-bottom: 29px;
+  .u-section-1 .u-text-8 {
+    margin-top: 168px;
   }
 
   .u-section-1 .u-text-9 {
@@ -187,7 +248,7 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 10686px;
+    min-height: 10899px;
   }
 
   .u-section-1 .u-text-1 {
@@ -196,7 +257,7 @@
 
   .u-section-1 .u-text-2 {
     width: auto;
-    margin-top: 4989px;
+    margin-top: 16px;
   }
 
   .u-section-1 .u-image-1 {
@@ -216,8 +277,8 @@
 
   .u-section-1 .u-text-3 {
     width: auto;
-    margin-left: -1px;
-    margin-right: -1px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-btn-1 {
@@ -228,14 +289,17 @@
     margin-top: 9px;
   }
 
+  .u-section-1 .u-btn-3 {
+    margin-top: 9px;
+  }
+
   .u-section-1 .u-text-4 {
     width: auto;
-    margin-top: -4859px;
   }
 
   .u-section-1 .u-image-3 {
     height: 405px;
-    margin-top: 0;
+    margin-top: 16px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -243,7 +307,7 @@
 
   .u-section-1 .u-image-4 {
     height: 405px;
-    margin-top: 12px;
+    margin-top: 11px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -251,7 +315,7 @@
 
   .u-section-1 .u-image-5 {
     height: 405px;
-    margin-top: 12px;
+    margin-top: 11px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -259,7 +323,7 @@
 
   .u-section-1 .u-image-6 {
     height: 405px;
-    margin-top: 12px;
+    margin-top: -328px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -271,13 +335,17 @@
     margin-right: 0;
   }
 
-  .u-section-1 .u-btn-3 {
+  .u-section-1 .u-btn-7 {
     margin-top: 45px;
+  }
+
+  .u-section-1 .u-btn-8 {
+    margin-top: 9px;
   }
 
   .u-section-1 .u-text-6 {
     width: auto;
-    margin-top: 2333px;
+    margin-top: 120px;
   }
 
   .u-section-1 .u-image-7 {
@@ -305,13 +373,25 @@
 
   .u-section-1 .u-text-7 {
     width: auto;
-    margin-left: -6px;
-    margin-right: -6px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
-  .u-section-1 .u-btn-4 {
+  .u-section-1 .u-btn-10 {
     margin-top: 45px;
-    margin-bottom: 50px;
+  }
+
+  .u-section-1 .u-btn-11 {
+    margin-top: 9px;
+  }
+
+  .u-section-1 .u-btn-12 {
+    margin-top: 9px;
+  }
+
+  .u-section-1 .u-text-8 {
+    width: auto;
+    margin-top: 120px;
   }
 
   .u-section-1 .u-image-10 {
@@ -328,6 +408,17 @@
     width: auto;
   }
 
+  .u-section-1 .u-text-9 {
+    width: auto;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-10 {
+    width: auto;
+    margin-top: 121px;
+  }
+
   .u-section-1 .u-image-12 {
     height: 405px;
     margin-right: initial;
@@ -341,11 +432,17 @@
     margin-left: initial;
     width: auto;
   }
+
+  .u-section-1 .u-text-11 {
+    width: auto;
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 9537px;
+    min-height: 9682px;
   }
 
   .u-section-1 .u-text-1 {
@@ -377,8 +474,20 @@
     margin-right: -26px;
   }
 
+  .u-section-1 .u-btn-1 {
+    margin-top: 46px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-top: 8px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-top: 10px;
+  }
+
   .u-section-1 .u-text-4 {
-    margin-top: 120px;
+    margin-top: 121px;
   }
 
   .u-section-1 .u-image-3 {
@@ -404,47 +513,52 @@
 
   .u-section-1 .u-image-6 {
     height: 304px;
+    margin-top: -304px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
+  .u-section-1 .u-btn-8 {
+    margin-top: 11px;
+  }
+
   .u-section-1 .u-text-6 {
-    margin-top: 120px;
+    margin-top: 121px;
   }
 
   .u-section-1 .u-image-7 {
     height: 306px;
-    width: 540px;
-    margin-left: 0;
-    margin-right: 0;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-image-8 {
     height: 306px;
-    width: 540px;
-    margin-left: 0;
-    margin-right: 0;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-image-9 {
     height: 304px;
-    width: 540px;
-    margin-left: 0;
-    margin-right: 0;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-text-7 {
-    margin-left: -23px;
-    margin-right: -23px;
+    margin-left: -1px;
+    margin-right: -1px;
   }
 
-  .u-section-1 .u-btn-4 {
-    margin-bottom: 0;
+  .u-section-1 .u-btn-11 {
+    margin-top: 7px;
   }
 
   .u-section-1 .u-text-8 {
-    width: auto;
+    margin-top: 121px;
   }
 
   .u-section-1 .u-image-10 {
@@ -462,43 +576,37 @@
   }
 
   .u-section-1 .u-text-9 {
-    width: auto;
-    margin-left: -3px;
-    margin-right: -3px;
+    margin-left: -4px;
+    margin-right: -4px;
   }
 
-  .u-section-1 .u-btn-5 {
+  .u-section-1 .u-btn-13 {
     margin-top: 71px;
-  }
-
-  .u-section-1 .u-text-10 {
-    width: auto;
   }
 
   .u-section-1 .u-image-12 {
     height: 304px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    width: 540px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-13 {
     height: 304px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    width: 540px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-text-11 {
-    width: auto;
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: -3px;
+    margin-right: -3px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 8347px;
+    min-height: 8886px;
   }
 
   .u-section-1 .u-text-1 {
@@ -532,18 +640,43 @@
   }
 
   .u-section-1 .u-btn-1 {
+    margin-top: 45px;
     margin-left: -95px;
     margin-right: -95px;
   }
 
   .u-section-1 .u-btn-2 {
+    margin-top: 10px;
+    margin-left: -95px;
+    margin-right: -95px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-left: -95px;
+    margin-right: -95px;
+  }
+
+  .u-section-1 .u-btn-4 {
+    margin-top: 10px;
+    margin-left: -95px;
+    margin-right: -95px;
+  }
+
+  .u-section-1 .u-btn-5 {
+    margin-top: 10px;
+    margin-left: -95px;
+    margin-right: -95px;
+  }
+
+  .u-section-1 .u-btn-6 {
+    margin-top: 10px;
     margin-left: -95px;
     margin-right: -95px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-left: -14px;
-    margin-right: -14px;
+    margin-left: -4px;
+    margin-right: -4px;
   }
 
   .u-section-1 .u-image-3 {
@@ -563,67 +696,95 @@
 
   .u-section-1 .u-image-5 {
     height: 191px;
-    width: 340px;
+    width: 100%;
     margin-left: 0;
     margin-right: 0;
   }
 
   .u-section-1 .u-image-6 {
     height: 191px;
-    width: 340px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-top: 10px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-text-5 {
-    margin-left: -45px;
-    margin-right: -45px;
+    margin-left: -24px;
+    margin-right: -24px;
   }
 
-  .u-section-1 .u-btn-3 {
+  .u-section-1 .u-btn-7 {
+    margin-left: -71px;
+    margin-right: -71px;
+  }
+
+  .u-section-1 .u-btn-8 {
+    margin-top: 10px;
+    margin-left: -71px;
+    margin-right: -71px;
+  }
+
+  .u-section-1 .u-btn-9 {
+    margin-top: 9px;
     margin-left: -71px;
     margin-right: -71px;
   }
 
   .u-section-1 .u-text-6 {
-    margin-left: -7px;
-    margin-right: -7px;
+    margin-top: 120px;
+    margin-left: -4px;
+    margin-right: -4px;
   }
 
   .u-section-1 .u-image-7 {
     height: 191px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 340px;
+    margin-top: 29px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-8 {
     height: 191px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 340px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-9 {
     height: 191px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 340px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-text-7 {
-    margin-left: -40px;
-    margin-right: -40px;
+    margin-top: 29px;
+    margin-left: -24px;
+    margin-right: -24px;
   }
 
-  .u-section-1 .u-btn-4 {
+  .u-section-1 .u-btn-10 {
+    margin-top: 21px;
+    margin-left: -71px;
+    margin-right: -71px;
+  }
+
+  .u-section-1 .u-btn-11 {
+    margin-top: 10px;
+    margin-left: -71px;
+    margin-right: -71px;
+  }
+
+  .u-section-1 .u-btn-12 {
     margin-left: -71px;
     margin-right: -71px;
   }
 
   .u-section-1 .u-text-8 {
-    margin-left: -4px;
-    margin-right: -4px;
+    margin-left: 8px;
+    margin-right: 8px;
   }
 
   .u-section-1 .u-image-10 {
@@ -638,41 +799,37 @@
   }
 
   .u-section-1 .u-text-9 {
+    margin-right: auto;
     margin-left: -25px;
-    margin-right: -25px;
   }
 
-  .u-section-1 .u-btn-5 {
-    margin-top: 46px;
+  .u-section-1 .u-btn-13 {
+    margin-top: -4px;
     margin-left: -72px;
     margin-right: -72px;
   }
 
   .u-section-1 .u-text-10 {
-    margin-left: -15px;
-    margin-right: -15px;
+    margin-left: -3px;
+    margin-right: -3px;
   }
 
   .u-section-1 .u-image-12 {
     height: 191px;
     width: 340px;
-    margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-1 .u-image-13 {
     height: 191px;
     width: 340px;
-    margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-1 .u-text-11 {
-    margin-left: -47px;
-    margin-right: -47px;
+    margin-left: -35px;
+    margin-right: -35px;
   }
 
-  .u-section-1 .u-btn-6 {
+  .u-section-1 .u-btn-14 {
     margin-left: -72px;
     margin-right: -72px;
   }
