--- a/Windows-PE-от-Аддерли.css
+++ b/Windows-PE-от-Аддерли.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 2461px;
+  min-height: 2703px;
 }
 
 .u-section-1 .u-text-1 {
@@ -42,7 +42,35 @@
 .u-section-1 .u-btn-2 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
-  margin: 9px auto 42px;
+  margin: 9px auto 0;
+}
+
+.u-section-1 .u-btn-3 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 9px auto 0;
+  padding: 10px 59px;
+}
+
+.u-section-1 .u-btn-4 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 9px auto 0;
+  padding: 10px 41px;
+}
+
+.u-section-1 .u-btn-5 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 9px auto 0;
+  padding: 10px 61px;
+}
+
+.u-section-1 .u-btn-6 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 9px auto 60px;
+  padding: 10px 43px 10px 42px;
 }
 
 @media (max-width: 1199px) {
@@ -53,7 +81,7 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2158px;
+    min-height: 2400px;
   }
 
   .u-section-1 .u-image-1 {
@@ -80,7 +108,7 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1855px;
+    min-height: 2097px;
   }
 
   .u-section-1 .u-image-1 {
@@ -107,7 +135,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1516px;
+    min-height: 1758px;
   }
 
   .u-section-1 .u-text-1 {
@@ -143,6 +171,26 @@
   }
 
   .u-section-1 .u-btn-2 {
+    margin-left: -52px;
+    margin-right: -52px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-left: -52px;
+    margin-right: -52px;
+  }
+
+  .u-section-1 .u-btn-4 {
+    margin-left: -52px;
+    margin-right: -52px;
+  }
+
+  .u-section-1 .u-btn-5 {
+    margin-left: -52px;
+    margin-right: -52px;
+  }
+
+  .u-section-1 .u-btn-6 {
     margin-left: -52px;
     margin-right: -52px;
   }
