--- a/Windows-Lite-x32-Сборки.css
+++ b/Windows-Lite-x32-Сборки.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 3392px;
+  min-height: 3518px;
 }
 
 .u-section-1 .u-text-1 {
@@ -65,24 +65,32 @@
 
 .u-section-1 .u-btn-2 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 12px auto 0;
+  background-image: none;
+  margin: 9px auto 0;
   padding: 10px 41px;
 }
 
-.u-section-1 .u-text-4 {
-  margin: 30px auto 0;
+.u-section-1 .u-btn-3 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 9px auto 0;
+  padding: 10px 43px 10px 42px;
 }
 
-.u-section-1 .u-btn-3 {
+.u-section-1 .u-text-4 {
+  margin: 65px auto 0;
+}
+
+.u-section-1 .u-btn-4 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 0 auto 45px;
+  margin: 0 auto 60px;
   padding: 10px 44px 10px 43px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 3640px;
+    min-height: 3753px;
   }
 
   .u-section-1 .u-text-1 {
@@ -127,17 +135,17 @@
 
   .u-section-1 .u-text-4 {
     width: auto;
-    margin-top: 24px;
+    margin-top: 26px;
   }
 
-  .u-section-1 .u-btn-3 {
-    margin-bottom: 22px;
+  .u-section-1 .u-btn-4 {
+    margin-bottom: 59px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 3461px;
+    min-height: 3428px;
   }
 
   .u-section-1 .u-text-1 {
@@ -199,18 +207,22 @@
     margin-top: 10px;
   }
 
-  .u-section-1 .u-text-4 {
-    margin-top: 67px;
+  .u-section-1 .u-btn-3 {
+    margin-top: 10px;
   }
 
-  .u-section-1 .u-btn-3 {
-    margin-bottom: 60px;
+  .u-section-1 .u-text-4 {
+    margin-top: 45px;
+  }
+
+  .u-section-1 .u-btn-4 {
+    margin-bottom: 26px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 3132px;
+    min-height: 2063px;
   }
 
   .u-section-1 .u-text-1 {
@@ -249,12 +261,17 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1330px;
+    min-height: 1417px;
   }
 
   .u-section-1 .u-text-1 {
     margin-left: 20px;
     margin-right: 20px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-1 {
@@ -299,18 +316,18 @@
     width: auto;
   }
 
-  .u-section-1 .u-text-3 {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   .u-section-1 .u-btn-1 {
-    margin-left: -69px;
-    margin-right: -69px;
+    margin-left: -68px;
+    margin-right: -68px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: -69px;
-    margin-right: -69px;
+    margin-left: -68px;
+    margin-right: -68px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-left: -68px;
+    margin-right: -68px;
   }
 }
